initialize server with Express and MongoDB connection

--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "idps",
   "version": "1.0.0",
   "description": "Minor project on IDPS using Smart Contracts.",
-  "main": "index.js",
+  "main": "server/server.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Aashish Singh",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
+  }
 }
