--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0"
   }
 }
