Refactor code structure for improved readability and maintainability

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,14 @@
-PORT=3000
-MONGODB_URI="my-mongodb-uri"
-JWT_SECRET=jwt_secret
-NODE_ENV=development
+PORT=
+MONGODB_URI=
+JWT_SECRET=
+NODE_ENV=
+
+EMAIL_USER=
+EMAIL_PASS=
+NOTIFICATION_EMAIL=
+
+
+# BLOCKCHAIN
+CONTRACT_ADDRESS=   # the deployed address from deploy.js
+PRIVATE_KEY= # get from Hardhat node (account 0)
+RPC_URL=
